--- a/css/styles.css
+++ b/css/styles.css
@@ -70,10 +70,14 @@ h3 {
 }
 /*Footer*/
 .footer {
-
+    background-color: var(--primarioOscuro);
+    padding: 1rem 0;
+    margin-top: 2rem; /*Separación del elemento de arriba*/
 }
 .footer__texto {
-    
+    text-align: center;
+    font-family: var(--fuentePrincipal);
+    font-size: 2.2rem;
 }
 
 /*Navegación*/
