--- a/css/styles.css
+++ b/css/styles.css
@@ -86,13 +86,18 @@ h3 {
     padding: 1rem 0; /*El primer valor es el margen de arriba y abajo juntos y el siguiente es izquierda y derecha*/
     display: flex; /*Usamos flexbox para elementos dentro de otro contenedor*/
     justify-content: center; 
-    gap: 2rem; /*Separación entre elementos en flexbox*/
+    gap: 2rem; /*Separación nueva entre elementos en flexbox*/
 }
 .navegacion__enlace {
     font-family: var(--fuentePrincipal);
     color: var(--blanco);
     font-size: 3rem;
+    /*margin-right: Esta es una forma anterior al gap que ayudaba a centrar 2rem; */
 }
+/*.navegacion__enlace:last-of-type{ Se usa para centrar de la mejor manera los elementos y que al último elemento no le de el
+    margen que hace que no se vea centrado. Esta es una forma anterior al gap que ayudaba a centrar
+    margin-right: 0;
+}*/
 .navegacion__enlace--activo, /*Agrego este para que quede seleccionado cuando esté en la pagina de inicio. Va a usar el mismo color*/
 .navegacion__enlace:hover { /*Hover se usa para los efectos de pasar el mouse sobre un enlace*/
     color: var(--secundario);
