--- a/css/styles.css
+++ b/css/styles.css
@@ -103,3 +103,19 @@ h3 {
     color: var(--secundario);
 }
 
+/*Productos*/
+.producto {
+
+}
+.producto__imagen {
+
+}
+.producto__informacion {
+
+}
+.producto__nombre {
+
+}
+.producto__precio {
+    
+}
